// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: critical 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <i
    aria-hidden="true"
    class="v-icon d-block material-icons theme--light"
    style="color: rgb(245, 105, 84); caret-color: #f56954;"
  >
    warning
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: major 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <i
    aria-hidden="true"
    class="v-icon d-block material-icons theme--light"
    style="color: rgb(255, 153, 0); caret-color: #ff9900;"
  >
    warning
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: minor 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <i
    aria-hidden="true"
    class="v-icon d-block material-icons theme--light"
    style="color: rgb(252, 220, 0); caret-color: #fcdc00;"
  >
    warning
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: ok 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <i
    aria-hidden="true"
    class="v-icon d-block material-icons theme--light"
    style="color: rgb(0, 166, 90); caret-color: #00a65a;"
  >
    warning
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: cancelled 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <i
    aria-hidden="true"
    class="v-icon d-block material-icons theme--light"
    style="color: rgb(117, 117, 117); caret-color: #757575;"
  >
    highlight_off
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: closed 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <i
    aria-hidden="true"
    class="v-icon d-block material-icons theme--light"
    style="color: rgb(47, 171, 99); caret-color: #2fab63;"
  >
    check_circle_outline
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: flapping 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <i
    aria-hidden="true"
    class="v-icon d-block material-icons theme--light"
    style="color: rgb(43, 62, 79); caret-color: #2b3E4F;"
  >
    swap_vert
  </i>
</span>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: noEvents 1`] = `
<c-no-events-icon-stub
  color="error"
  top="top"
  value="1386435600000"
/>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: stealthy 1`] = `
<span
  class="v-tooltip v-tooltip--top"
>
  <transition-stub
    name="slide-y-reverse-transition"
  />
  <i
    aria-hidden="true"
    class="v-icon d-block material-icons theme--light"
    style="color: rgb(117, 117, 117); caret-color: #757575;"
  >
    swap_vert
  </i>
</span>
`;
